--- a/src/shared/ui/ButtonLoader/ButtonLoader.module.css
+++ b/src/shared/ui/ButtonLoader/ButtonLoader.module.css
@@ -1,4 +1,4 @@
-.loaderContrainer {
+.loaderContainer {
   display: flex;
   gap: var(--spacing-sm);
 }
